HW2/part4/t37.output
running e2c
compiling the C generated code
t37.c: In function ‘main’:
t37.c:4:1: warning: useless type name in empty declaration
 int ;
 ^
t37.c:5:2: error: expected expression before ‘=’ token
  = 1;
  ^
t37.c:6:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t37.c:8:1: warning: useless type name in empty declaration
 int ;
 ^
t37.c:9:2: error: expected expression before ‘=’ token
  = 2;
  ^
t37.c:10:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t37.c:12:1: warning: useless type name in empty declaration
 int ;
 ^
t37.c:13:2: error: expected expression before ‘=’ token
  = 3;
  ^
t37.c:14:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t37.c:16:1: warning: useless type name in empty declaration
 int ;
 ^
t37.c:17:2: error: expected expression before ‘=’ token
  = 4;
  ^
t37.c:18:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t37.c:19:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t37.c:20:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t37.c:21:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t37.c:22:1: error: expected declaration or statement at end of input
 }
 ^
t37.c:22:1: error: expected declaration or statement at end of input
t37.c:22:1: error: expected declaration or statement at end of input
